test/sema/traits/trait_lookup_on_type_not_conforming_to_it.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B {}

struct SB {
  impl B;
}

fn main() {
  // CHECK: [[# @LINE + 1]]:19: error: '() -> SB' doesn't implement trait 'B'
  @<() -> SB impl B>::foo();
}
